--- a/src/styles/angular-material-styles.scss
+++ b/src/styles/angular-material-styles.scss
@@ -192,7 +192,7 @@ table.mat-mdc-table {
     &.mat-mdc-header-cell {
       border-bottom: 2pt solid $title-color;
       font-size: $font-size-grid-header;
-      line-height: normal;
+      line-height: normal; //13px;
     }
 
     &.column-action-check {
@@ -200,44 +200,44 @@ table.mat-mdc-table {
     }
 
     &:first-of-type {
-      padding-left: 10px;
+      padding-left: $grid-entry-padding-vertical;
     }
 
     &:last-of-type {
-      padding-right: 10px !important;
+      padding-right: $grid-entry-padding-vertical !important;
     }
 
     &.column-action {
       text-align: center;
       width: $grid-row-height !important;
-      padding-top: 0;
-      padding-bottom: 0;
+      padding-top: 0; //0.25rem;
+      padding-bottom: 0; //0.25rem;
       padding-right: $grid-entry-padding-vertical;
     }
   }
 
   td {
     vertical-align: top;
-    padding: 10px 10px 10px 0;
+    padding: $grid-entry-padding-vertical $grid-entry-padding-horizontal $grid-entry-padding-vertical 0;
     font-family: $font-family-secondary;
     font-size: $font-size-grid;
     line-height: $font-size-grid;
 
     &:first-of-type {
-      padding-left: 10px;
+      padding-left: $grid-entry-padding-vertical;
     }
 
     &.mat-mdc-cell:last-of-type,
     &.mat-mdc-footer-cell:last-of-type {
-      padding-right: 10px;
+      padding-right: $grid-entry-padding-vertical;
       width: auto;
     }
 
     &.column-action {
       text-align: center;
       width: $grid-row-height !important;
-      padding-top: 0;
-      padding-bottom: 0;
+      padding-top: 0; //0.25rem;
+      padding-bottom: 0; //0.25rem;
       padding-right: $grid-entry-padding-vertical;
       vertical-align: middle;
     }
@@ -260,7 +260,9 @@ table.mat-mdc-table {
     }
 
     a.item-link {
-      color: $link-color;
+      color: $primary-color;
+      text-decoration: underline;
+      white-space: nowrap;
     }
 
     a.item-link:hover {
@@ -272,6 +274,10 @@ table.mat-mdc-table {
       color: $primary-color;
       text-decoration: underline;
       white-space: nowrap;
+    }
+
+    .text-label {
+      font-size: $font-size-grid * 0.95;
     }
 
     .text-highlight {
@@ -304,7 +310,7 @@ table.mat-mdc-table {
     &.mat-mdc-footer-row {
 
       &.text-not-found > td {
-        padding: 1rem;
+        padding: $grid-entry-padding-vertical $grid-entry-padding-horizontal;
         text-align: center;
       }
 
@@ -316,6 +322,14 @@ table.mat-mdc-table {
     &.mat-mdc-row {
       background-color: $white;
     }
+  }
+
+  &.table-no-margin {
+    margin: 0;
+  }
+
+  &.data-centered td {
+    vertical-align: middle;
   }
 
   .text-align-right {
@@ -477,8 +491,12 @@ table.mat-mdc-table.emp-designer {
     margin: 8px 8px 8px 0;
   }
 
-  &.horizontal-slim {
+  &.horizontal-md {
     margin: 0 8px 8px 0;
+  }
+
+  &.horizontal-slim {
+    margin: 0 8px 0 0;
   }
 
   &.horizontal-wide {
@@ -500,7 +518,13 @@ table.mat-mdc-table.emp-designer {
 // matexpansion panel
 //
 
+.mat-accordion .mat-expansion-panel:last-of-type,
+.mat-accordion .mat-expansion-panel:first-of-type {
+  border-radius: 0 !important;
+}
+
 .mat-expansion-panel-header {
+  max-height: 48px !important;
   min-height: 36px;
   height: auto;
   padding: 4px 24px !important;
@@ -509,6 +533,7 @@ table.mat-mdc-table.emp-designer {
 }
 
 .mat-expansion-panel-header.mat-expanded {
+  max-height: 48px !important;
   min-height: 36px;
   height: auto;
   padding: 4px 24px !important;
@@ -526,6 +551,12 @@ table.mat-mdc-table.emp-designer {
 
 .mat-expansion-panel .mat-action-row {
   padding: 8px 30px 8px 24px !important;
+}
+
+.expand-half .mat-expansion-panel-body {
+  max-height: 35vh;
+  overflow-y: auto;
+  padding: 0 !important;
 }
 
 //
@@ -668,16 +699,21 @@ table.mat-mdc-table.emp-designer {
 }
 
 .mat-mdc-menu-content,
+.mat-mdc-menu-content .mat-mdc-menu-item .mat-mdc-menu-item-text,
 .mat-mdc-menu-content .mat-mdc-menu-item .mdc-list-item__primary-text {
-  font-size: 9pt;
+  font-size: 9pt !important;
 }
 
 .mat-mdc-menu-item.selected {
-  background: rgba(0, 0, 0, 0.04);
+  background: lighten($primary-color, 65%) !important;
+  color: $primary-color !important;
 
-  .mdc-list-item__primary-text {
-    color: $primary-color;
-    font-weight: 600;
+  .mat-mdc-menu-item-text {
+    font-weight: 600 !important;
+  }
+
+  &:hover {
+    background: lighten($primary-color, 60%) !important;
   }
 }
 
@@ -739,8 +775,8 @@ table.mat-mdc-table.emp-designer {
     }
 
     .mdc-checkbox__native-control {
-      width: 28px !important;
-      height: 28px !important;
+      width: $checkbox-size !important;
+      height: $checkbox-size !important;
     }
 
     .mdc-checkbox__native-control:enabled:not(:checked):not(:indeterminate):not([data-indeterminate=true]) ~ .mdc-checkbox__background {
@@ -760,7 +796,9 @@ table.mat-mdc-table.emp-designer {
     display: none;
   }
 
-  &.mat-warn .mdc-form-field > label {
+  &.mat-warn.text-light .mdc-form-field > label,
+  &.mat-accent.text-light .mdc-form-field > label,
+  &.mat-accent.text-light .mdc-form-field > label {
     color: $white;
   }
 
@@ -775,7 +813,7 @@ table.mat-mdc-table.emp-designer {
 //
 
 .mat-mdc-radio-group {
-  height: 28px;
+  height: $checkbox-size;
   display: flex;
   align-items: center;
   margin: 2px 0;
@@ -834,5 +872,5 @@ table.mat-mdc-table.emp-designer {
 //
 
 .mat-drawer-backdrop.mat-drawer-shown {
-  background-color: rgba(100, 100, 100, 0.5);
+  background-color: $backdrop-color !important;
 }
