--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -7,9 +7,6 @@
 
 @import 'mixins', 'variables';
 
-@mixin raised-header {
-  box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.28);
-}
 
 .card {
   @include column;
@@ -79,6 +76,11 @@
   padding: 0 16px 16px 16px !important;
 }
 
+.card-body-without-top {
+  margin-top: 0;
+  padding: 0 16px 16px 16px !important;
+}
+
 .card-header-raised {
   border-bottom: 3px solid $title-border-color;
 
@@ -123,4 +125,20 @@
   .card-floating-secondary > .card {
     margin: -10px 0 0 -10px;
   }
+}
+
+//
+// Responsive
+//
+@include medium() {
+
+  .card-header {
+    min-height: 39px;
+    padding: 16px 16px 0 16px;
+
+    &.card-header-flat {
+      padding: 16px;
+    }
+  }
+
 }
