--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -168,21 +168,24 @@ $simple-list-background-color: hsl(210, 20%, 96%) !default;
 $grid-header-background-color: $primary-color !default;
 $grid-header-color: $secondary-text-color !default;
 $grid-footer-background-color: $disabled-color;
-$grid-border: 0;
-$grid-even-background-color: $white;
 $grid-odd-background-color: #f4f4f4 !default;
-$grid-hover-background-color: #f5f8fa;
-$grid-selected-background-color: #f0f3f5;
-$grid-selected-hover-background-color: #edf0f3;
+$grid-even-background-color: $white;
+
+$grid-selected-background-color: hsl(205, 20%, 92%);
+$grid-nested-background-color: hsl(205, 20%, 92%);
+$grid-nested-border: 2px solid hsl(205, 20%, 60%);
+
+$grid-hover-background-color: hsl(205, 20%, 96%);
+$grid-selected-hover-background-color: hsl(205, 20%, 90%);
+$grid-nested-hover-background-color: hsl(205, 20%, 90%);
+
+$grid-border: 0;
 $grid-header-height: 37px;
 $grid-row-height: 35px;
 $grid-entry-padding-vertical: 10px;
 $grid-entry-padding-horizontal: 10px;
 $grid-entry-padding-vertical-first: 10px;
 $grid-entry-padding-vertical-default: 8px;
-$grid-nested-background-color: #e0e6eb;
-$grid-nested-hover-background-color: #d0dae1;
-$grid-nested-border: 2px solid #859cad;
 
 //
 // Designer
