--- a/src/styles/responsive.scss
+++ b/src/styles/responsive.scss
@@ -50,7 +50,7 @@
 }
 
 
-.md-fx-column-container {
+.sm-fx-column-container {
   @include small() {
     @include column;
     flex: 0;
@@ -63,7 +63,13 @@
 .fx-column-container,
 .fx-column-container-fill {
 
-  .md-fx-item {
+  .sm-fx-item-none {
+    @include small() {
+      flex: 0 0 auto;
+    }
+  }
+
+  .sm-fx-item {
     @include small() {
       flex: 1 1 100%;
       max-height: 100%;
@@ -71,23 +77,98 @@
     }
   }
 
-  .md-fx-item-none {
-    @include small() {
-      flex: 0 0 auto;
-    }
-  }
-
-  .md-fx-item-size {
-    @include small() {
-      flex: 1 1 var(--md-size);
-      max-width: var(--md-size);
-    }
-  }
-
-  .md-fx-gap-half {
+  .sm-fx-gap-half {
     @include small() {
       gap: 0.5rem;
     }
   }
 
+  .sm-fx-gap-three-quarter {
+    @include small() {
+      gap: 0.75rem;
+    }
+  }
+
+  .sm-fx-gap {
+    @include small() {
+      gap: 1rem;
+    }
+  }
+
+  .sm-fx-gap-none {
+    @include small() {
+      gap: 0;
+    }
+  }
+
+}
+
+
+.fx-row-container {
+  .sm-fx-item-half {
+    @include small() {
+      flex: 1 1 50%;
+      max-width: 50%;
+    }
+  }
+
+  .sm-fx-item-size {
+    @include small() {
+      flex: 1 1 var(--sm-size);
+      max-width: var(--sm-size);
+    }
+  }
+}
+
+.fx-row-container-fill {
+  .sm-fx-item-half {
+    @include small() {
+      flex: 1 1 50%;
+      max-width: 50%;
+      max-height: 100%;
+    }
+  }
+
+  .sm-fx-item-size {
+    @include small() {
+      flex: 1 1 var(--sm-size);
+      max-width: var(--sm-size);
+      max-height: 100%;
+    }
+  }
+}
+
+
+.fx-column-container {
+  .sm-fx-item-half {
+    @include small() {
+      flex: 1 1 50%;
+      max-height: 50%;
+    }
+  }
+
+  .sm-fx-item-size {
+    @include small() {
+      flex: 1 1 var(--sm-size);
+      max-height: var(--sm-size);
+    }
+  }
+}
+
+.fx-column-container-fill {
+  .sm-fx-item-half {
+    @include small() {
+      flex: 1 1 50%;
+      max-height: 50%;
+      max-width: 100%;
+    }
+  }
+
+  .sm-fx-item-size {
+    @include small() {
+      flex: 1 1 var(--sm-size);
+      max-height: var(--sm-size);
+      max-width: 100%;
+    }
+  }
 }
